// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an artwork caption properly 1`] = `
.c7 {
  color: #999;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c4 .title {
  font-family: Unica77LLWebMediumItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c4 .title:after {
  content: ', ';
}

.c4 .date:after {
  content: ', ';
}

.c5.artist-name {
  margin-right: 20px;
}

.c5 .c6 {
  color: black;
}

.c2 {
  display: none;
}

.c3 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c3 a {
  color: black;
}

.c8 {
  margin-left: 20px;
  white-space: nowrap;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f8f8f8;
  padding: 30px 60px;
}

.c0 p {
  margin: 0px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width:720px) {
  .c4 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c4 .title {
    font-family: Unica77LLWebMediumItalic , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:720px) {
  .c5.artist-name {
    margin-bottom: 5px;
  }
}

@media (max-width:720px) {
  .c2 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    cursor: pointer;
    display: inline-block;
  }

  .c2 span {
    border-bottom: 1px solid black;
  }
}

@media (max-width:720px) {
  .c3 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    display: block;
    margin-top: 20px;
  }
}

@media (max-width:720px) {
  .c8 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:720px) {
  .c0 {
    position: absolute;
    bottom: 0;
    width: calc(100% - 40px);
    padding: 20px;
  }
}

<div
  className="c0"
>
  .c6 {
  color: #999;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c3 .title {
  font-family: Unica77LLWebMediumItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c3 .title:after {
  content: ', ';
}

.c3 .date:after {
  content: ', ';
}

.c4.artist-name {
  margin-right: 20px;
}

.c4 .c5 {
  color: black;
}

.c1 {
  display: none;
}

.c2 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c2 a {
  color: black;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width:720px) {
  .c3 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c3 .title {
    font-family: Unica77LLWebMediumItalic , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:720px) {
  .c4.artist-name {
    margin-bottom: 5px;
  }
}

@media (max-width:720px) {
  .c1 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    cursor: pointer;
    display: inline-block;
  }

  .c1 span {
    border-bottom: 1px solid black;
  }
}

@media (max-width:720px) {
  .c2 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    display: block;
    margin-top: 20px;
  }
}

<div
    className="c0"
  >
    .c0 {
  display: none;
}

@media (max-width:720px) {
  .c0 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    cursor: pointer;
    display: inline-block;
  }

  .c0 span {
    border-bottom: 1px solid black;
  }
}

<div
      className="fullscreen-viewer__caption-toggle c0"
      onClick={undefined}
    >
      <span>
        Hide
      </span>
    </div>
    .c4 {
  color: #999;
  text-decoration: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c1 .title {
  font-family: Unica77LLWebMediumItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c1 .title:after {
  content: ', ';
}

.c1 .date:after {
  content: ', ';
}

.c2.artist-name {
  margin-right: 20px;
}

.c2 .c3 {
  color: black;
}

.c0 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c0 a {
  color: black;
}

@media (max-width:720px) {
  .c1 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c1 .title {
    font-family: Unica77LLWebMediumItalic , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:720px) {
  .c2.artist-name {
    margin-bottom: 5px;
  }
}

@media (max-width:720px) {
  .c0 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    display: block;
    margin-top: 20px;
  }
}

<div
      className="c0"
      open={true}
    >
      .c3 {
  color: #999;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c0 .title {
  font-family: Unica77LLWebMediumItalic , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c0 .title:after {
  content: ', ';
}

.c0 .date:after {
  content: ', ';
}

.c1.artist-name {
  margin-right: 20px;
}

.c1 .c2 {
  color: black;
}

@media (max-width:720px) {
  .c0 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 .title {
    font-family: Unica77LLWebMediumItalic , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:720px) {
  .c1.artist-name {
    margin-bottom: 5px;
  }
}

<div
        className="c0"
      >
        .c2 {
  color: #999;
  text-decoration: none;
}

.c0.artist-name {
  margin-right: 20px;
}

.c0 .c1 {
  color: black;
}

@media (max-width:720px) {
  .c0.artist-name {
    margin-bottom: 5px;
  }
}

<div
          className="artist-name c0"
        >
          .c1 {
  color: #999;
  text-decoration: none;
}

.c0 .c0 {
  color: black;
}

<span
            className="name"
          >
            .c1 {
  color: #999;
  text-decoration: none;
}

.c0 .c0 {
  color: black;
}

<a
              className="c0 c1"
              href="/artwork/fernando-botero"
            >
              Fernando Botero
            </a>
          </span>
        </div>
        .c2 {
  color: #999;
  text-decoration: none;
}

.c0.artist-name {
  margin-right: 20px;
}

.c0 .c1 {
  color: black;
}

@media (max-width:720px) {
  .c0.artist-name {
    margin-bottom: 5px;
  }
}

<div
          className="c0"
        >
          .c1 {
  color: #999;
  text-decoration: none;
}

.c0 .c0 {
  color: black;
}

<span
            className="title"
          >
            .c1 {
  color: #999;
  text-decoration: none;
}

.c0 .c0 {
  color: black;
}

<a
              className="c0 c1"
              href="/artwork/fernando-botero-nude-on-the-beach"
            >
              Nude on the Beach
            </a>
          </span>
          <span
            className="date"
          >
            2000
          </span>
          .c1 {
  color: #999;
  text-decoration: none;
}

.c0 .c0 {
  color: black;
}

<a
            className="c0 c1"
            href="/partner/gary-nader"
          >
            Gary Nader
          </a>
        </div>
      </div>
    </div>
  </div>
  .c0 {
  margin-left: 20px;
  white-space: nowrap;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

@media (max-width:720px) {
  .c0 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

<div
    className="c0"
  >
    2 of 10
  </div>
</div>
`;

exports[`renders an image caption properly 1`] = `
.c2 {
  display: none;
}

.c3 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c3 a {
  color: black;
}

.c4 {
  margin-left: 20px;
  white-space: nowrap;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f8f8f8;
  padding: 30px 60px;
}

.c0 p {
  margin: 0px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width:720px) {
  .c2 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    cursor: pointer;
    display: inline-block;
  }

  .c2 span {
    border-bottom: 1px solid black;
  }
}

@media (max-width:720px) {
  .c3 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    display: block;
    margin-top: 20px;
  }
}

@media (max-width:720px) {
  .c4 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:720px) {
  .c0 {
    position: absolute;
    bottom: 0;
    width: calc(100% - 40px);
    padding: 20px;
  }
}

<div
  className="c0"
>
  .c1 {
  display: none;
}

.c2 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c2 a {
  color: black;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (max-width:720px) {
  .c1 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    cursor: pointer;
    display: inline-block;
  }

  .c1 span {
    border-bottom: 1px solid black;
  }
}

@media (max-width:720px) {
  .c2 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    display: block;
    margin-top: 20px;
  }
}

<div
    className="c0"
  >
    .c0 {
  display: none;
}

@media (max-width:720px) {
  .c0 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    cursor: pointer;
    display: inline-block;
  }

  .c0 span {
    border-bottom: 1px solid black;
  }
}

<div
      className="fullscreen-viewer__caption-toggle c0"
      onClick={undefined}
    >
      <span>
        Hide
      </span>
    </div>
    .c0 {
  font-family: Unica77LLWebMedium , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

.c0 a {
  color: black;
}

@media (max-width:720px) {
  .c0 {
    font-family: Unica77LLWebMedium , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
    display: block;
    margin-top: 20px;
  }
}

<div
      className="c0"
      open={true}
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Photo by Adam Kuehl for Artsy.</p>",
          }
        }
      />
    </div>
  </div>
  .c0 {
  margin-left: 20px;
  white-space: nowrap;
  font-family: Unica77LLWebRegular , 'Arial', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
}

@media (max-width:720px) {
  .c0 {
    font-family: Unica77LLWebRegular , 'Arial', 'serif';
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

<div
    className="c0"
  >
    3 of 10
  </div>
</div>
`;
